# MEMEX

./: .gitignore  AGENTS.md  README.md  pyproject.toml
app/: README.md  __init__.py
data/: .gitkeep  README.md
docs/: wiki-plan.md  wiki-update-runbook.md  wiki-v2-plan.md
scripts/: README.md  wiki_costs.py  wiki_dev.py  wiki_extract.py  wiki_recover_databases.py  wiki_server.py  wiki_validate.py
tests/: README.md  dashboard_server_helpers.py  helpers.py  html_helpers.py  test_wiki_anthropic_extraction.py  test_wiki_build_synthesis.py  test_wiki_core.py  test_wiki_dashboard.py  test_wiki_dashboard_assets.py  test_wiki_dashboard_forms.py  test_wiki_dashboard_html.py  test_wiki_dashboard_ingest_html.py  test_wiki_dashboard_routes.py  test_wiki_dashboard_server.py  test_wiki_dashboard_server_ingest.py  test_wiki_dashboard_server_posts.py  test_wiki_dashboard_server_source_actions.py  test_wiki_dashboard_source_actions.py  test_wiki_database_recovery.py  test_wiki_extraction.py  test_wiki_extraction_packets.py  test_wiki_google_extraction.py  test_wiki_model_profiles.py  test_wiki_openai_extraction.py  test_wiki_openrouter_review.py  test_wiki_page_html.py  test_wiki_provider_balances.py  test_wiki_provider_failures.py  test_wiki_review_adapters.py  test_wiki_review_build.py  test_wiki_server_script.py  test_wiki_source_deletion.py  test_wiki_source_detail_html.py  test_wiki_source_extraction.py  test_wiki_source_fix.py  test_wiki_source_repair.py  test_wiki_source_validation.py  test_wiki_storage.py  test_wiki_usage_costs.py  test_wiki_workflows.py
vault/: .gitkeep  (+1 more)
(+99 files in other folders)
